Mas cambios de UI

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 
 </section>
 
-<section class="preferences-bottom wz-scroll-y">
+<section class="preferences-bottom dark wz-scroll-y">
 
     <!-- HDD ZONE START -->
 
@@ -184,7 +184,7 @@
 
         <section class="preferences-account-buttons">
 
-            <article class="preferences-button account change-password ui-btn gray">
+            <article class="preferences-button account change-password ui-btn">
                 <article class="preferences-account-button-container">
                   <span class="preferences-account-button"></span>
                 </article>
@@ -278,7 +278,7 @@
 
         <section class="preferences-account-buttons">
 
-            <article class="preferences-button account cancel-password ui-btn gray">
+            <article class="preferences-button account cancel-password ui-btn">
                 <article class="preferences-account-button-container">
                   <span class="preferences-account-button"></span>
                 </article>
@@ -498,7 +498,7 @@
 
                 <!-- <span class="preferences-wallpaper-title"></span> -->
 
-                <article class="preferences-wallpaper-upload wz-wallpaper-uploader-start ui-btn gray">
+                <article class="preferences-wallpaper-upload wz-wallpaper-uploader-start ui-btn">
 
                     <figure class="preferences-upload-background"></figure>
                     <figure class="preferences-upload-uploading"></figure>
