--- a/main.html
+++ b/main.html
@@ -224,7 +224,7 @@
             <figure class="input-icon pass-icon search-icon">
               <i></i>
             </figure>
-            <input>
+            <input type="password">
             <figure class="delete-content">
               <i></i>
             </figure>
