--- a/main.html
+++ b/main.html
@@ -322,7 +322,7 @@
                 <article class="preferences-social-title">
                     <span class="preferences-social-network"/>
                     <span class="preferences-social-name twitter"></span>
-                    <span class="preferences-social-icon plus wz-view-option" data-social-network="twitter">
+                    <span class="preferences-social-icon plus" data-social-network="twitter">
                       <span class="preferences-social-icon-plus"></span>
                     </span>
                 </article>
@@ -332,7 +332,7 @@
             <article class="preferences-social-account wz-prototype">
                 <img class="preferences-social-avatar" />
                 <span class="ellipsis preferences-social-name dark"></span>
-                <span class="preferences-social-icon settings wz-view-option">
+                <span class="preferences-social-icon settings">
                   <span class="preferences-social-icon-gear"></span>
                 </span>
             </article>
