--- a/social.html
+++ b/social.html
@@ -37,7 +37,7 @@
         <span class="preferences-account-button"></span>
     </article>
 
-    <article class="preferences-button warning ui-btn cancel">
+    <article class="preferences-button warning ui-btn">
         <span class="preferences-account-button"></span>
     </article>
 
