Payment style modified

--- a/main.html
+++ b/main.html
@@ -636,9 +636,9 @@
 
           <figure class="credit-card-saved"></figure>
 
-          <input class="credit-number">
-          <input class="credit-name">
-          <input class="credit-exp">
+          <span class="credit-number">1234   1234   1234   1234</span>
+          <span class="credit-name">JORGE FERNANDEZ MANTECA</span>
+          <span class="credit-exp">06/20</span>
 
           <button class="ui-btn big cancel cancel-credit">
             <span class="ellipsis"></span>
