Little payment changes

--- a/main.html
+++ b/main.html
@@ -653,7 +653,7 @@
           <figure class="credit-card-saved"></figure>
 
           <span class="credit-number">1234   1234   1234   1234</span>
-          <span class="credit-name">JORGE FERNANDEZ MANTECA</span>
+          <span class="credit-name">JOHN DOE</span>
           <span class="credit-exp">06/20</span>
 
           <button class="ui-btn big cancel cancel-credit">
