--- a/main.html
+++ b/main.html
@@ -609,7 +609,7 @@
 
           <section class="preferences-bottom-payment">
 
-              <form action="https://restbeta.inevio.com/subscribe" method="POST" id="payment-form">
+              <form action="https://restbeta.inevio.com/subscribe" method="POST" class="payment-form">
                 <span class="preferences-bottom-label name"></span>
                 <input class="ui-input payment-name" name="fullName"/>
 
@@ -643,8 +643,8 @@
                   <div class="sk-circle12 sk-child"></div>
                 </div>
                 <span class="stripe-loading load-only"></span>
-
               </form>
+
           </section>
 
         </section>
@@ -652,9 +652,9 @@
 
           <figure class="credit-card-saved"></figure>
 
-          <span class="credit-number">1234   1234   1234   1234</span>
-          <span class="credit-name">JOHN DOE</span>
-          <span class="credit-exp">06/20</span>
+          <span class="credit-number"></span>
+          <span class="credit-name"></span>
+          <span class="credit-exp"></span>
 
           <button class="ui-btn big cancel cancel-credit">
             <span class="ellipsis"></span>
