New preferences test

--- a/main.html
+++ b/main.html
@@ -1,27 +1,38 @@
 <section class="preferences-top ui-header dark wz-dragger">
 
-    <nav class="wz-dragger">
-        <li class="hdd active wz-dragger"></li>
-        <li class="account wz-dragger"></li>
-        <li class="social wz-dragger"></li>
-        <li class="config wz-dragger"></li>
-        <li class="custom wz-dragger"></li>
-        <!--<li class="invite wz-dragger"></li>-->
-        <li class="backup wz-dragger"></li>
-        <!--<li class="about wz-dragger"></li>-->
-    </nav>
+    <section class="preferences-top-header">
 
-    <article class="ui-header-buttons right wz-dragger">
-        <figure class="ui-minimize">
-            <i></i>
-        </figure>
-        <figure class="ui-maximize inactive">
-            <i></i>
-        </figure>
-        <figure class="ui-close">
-            <i></i>
-        </figure>
-    </article>
+      <article class="appName">
+        <i class="iconApp"></i>
+        <span></span>
+      </article>
+
+      <article class="ui-header-buttons right wz-dragger">
+          <figure class="ui-minimize">
+              <i></i>
+          </figure>
+          <figure class="ui-maximize inactive">
+              <i></i>
+          </figure>
+          <figure class="ui-close">
+              <i></i>
+          </figure>
+      </article>
+
+    </section>
+
+    <section class="preferences-top-nav">
+      <nav class="wz-dragger">
+          <li class="hdd active wz-dragger"></li>
+          <li class="account wz-dragger"></li>
+          <li class="social wz-dragger"></li>
+          <li class="config wz-dragger"></li>
+          <li class="custom wz-dragger"></li>
+          <!--<li class="invite wz-dragger"></li>-->
+          <li class="backup wz-dragger"></li>
+          <!--<li class="about wz-dragger"></li>-->
+      </nav>
+    </section>
 
 </section>
 
@@ -30,7 +41,6 @@
     <!-- HDD ZONE START -->
 
     <section class="preferences-bottom-content hdd">
-
         <span class="preferences-bottom-title hdd"></span>
         <span class="preferences-bottom-description hdd"></span>
 
