Header app style

--- a/main.html
+++ b/main.html
@@ -1,9 +1,11 @@
 <section class="preferences-top ui-header dark wz-dragger">
 
-    <section class="preferences-top-header">
+    <section class="preferences-top-header wz-dragger">
 
-      <article class="appName">
-        <i class="iconApp"></i>
+      <article class="appName wz-dragger">
+        <figure class="iconApp wz-dragger">
+          <i></i>
+        </figure>
         <span></span>
       </article>
 
