--- a/main.html
+++ b/main.html
@@ -25,13 +25,13 @@
 
     <section class="preferences-top-nav">
       <nav class="wz-dragger">
-          <li class="hdd active wz-dragger"></li>
           <li class="account wz-dragger"></li>
+          <li class="hdd active wz-dragger"></li>
           <li class="social wz-dragger"></li>
           <li class="config wz-dragger"></li>
           <li class="custom wz-dragger"></li>
-          <!--<li class="invite wz-dragger"></li>-->
           <li class="backup wz-dragger"></li>
+          <!--<li class="invite wz-dragger"></li>-->
           <!--<li class="about wz-dragger"></li>-->
       </nav>
     </section>
@@ -43,8 +43,113 @@
     <!-- HDD ZONE START -->
 
     <section class="preferences-bottom-content hdd">
+
+      <section class="preferences-bottom-content-space active">
+
+        <section class="preferences-hdd-content-top">
+          <figure class="hdd-top-icon">
+            <i></i>
+          </figure>
+          <span></span>
+        </section>
+
+        <section class="preferences-hdd-content-bottom">
+          <article class="box-hdd-usage left">
+            <article class="preferences-hdd-quota">
+
+                <span class="preferences-hdd-usage"></span>
+
+                <figure class="preferences-hdd-cake">
+                  <span class="preferences-hdd-cake-circle">
+                    <span class="preferences-hdd-cake-total"></span>
+                    <span class="preferences-hdd-cake-free"></span>
+                  </span>
+
+                    <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
+
+                </figure>
+
+              </article>
+          </article>
+          <article class="box-hdd-info right">
+            <article class="box-user-info">
+              <article class="box-user-info-top">
+                <span></span>
+              </article>
+              <article class="box-user-info-middle">
+                <article class="left"></article>
+                <article class="right"></article>
+              </article>
+              <article class="box-user-info-bottom">
+                <article class="ui-btn accept">
+                  <span></span>
+                </article>
+              </article>
+            </article>
+
+            <!--
+            <article class="box-user-credit">
+            </article>
+          -->
+
+        </article>
+
+      </section>
+
+
+
+
+        </section>
+
+      <section class="preferences-bottom-content-more">
+
+        <section class="preferences-hdd-content-top">
+          <figure class="hdd-top-icon">
+            <i></i>
+          </figure>
+          <span></span>
+        </section>
+
+        <section class="preferences-hdd-content-bottom">
+          <article class="info-more left">
+            <li class="info-top">
+                <span class="tittle"></span>
+                <span></span>
+            </li>
+            <li class="info-bottom">
+              <span class="tittle"></span>
+              <span></span>
+            </li>
+          </article>
+          <article class="info-more right">
+
+          </article>
+          <article class="info-more left">
+
+          </article>
+        </section>
+
+      </section>
+
+      <section class="preferences-bottom-content-order">
+
+      </section>
+
+      <section class="preferences-bottom-content-finish">
+
+      </section>
+
+      <!--
         <span class="preferences-bottom-title hdd"></span>
         <span class="preferences-bottom-description hdd"></span>
+
+
+      <article class="preferences-hdd-content-top">
+        <figure class="hdd-top-icon">
+          <i></i>
+        </figure>
+        <span></span>
+      </article>
 
         <article class="preferences-hdd-quota">
 
