--- a/main.html
+++ b/main.html
@@ -44,100 +44,89 @@
 
     <section class="preferences-bottom-content hdd">
 
-      <section class="preferences-bottom-content-space active">
+      <section class="preferences-hdd-payment space active">
 
-        <section class="preferences-hdd-content-top">
-          <figure class="hdd-top-icon">
+        <article class="preferences-hdd-payment-top">
+
+          <figure>
             <i></i>
           </figure>
-          <span></span>
-        </section>
-
-        <section class="preferences-hdd-content-bottom">
-          <article class="box-hdd-usage left">
-            <article class="preferences-hdd-quota">
-
-                <span class="preferences-hdd-usage"></span>
-
-                <figure class="preferences-hdd-cake">
-                  <span class="preferences-hdd-cake-circle">
-                    <span class="preferences-hdd-cake-total"></span>
-                    <span class="preferences-hdd-cake-free"></span>
-                  </span>
-
-                    <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
-
-                </figure>
-
-              </article>
-          </article>
-          <article class="box-hdd-info right">
-            <article class="box-user-info">
-              <article class="box-user-info-top">
-                <span></span>
-              </article>
-              <article class="box-user-info-middle">
-                <article class="left"></article>
-                <article class="right"></article>
-              </article>
-              <article class="box-user-info-bottom">
-                <article class="ui-btn accept">
-                  <span></span>
-                </article>
-              </article>
-            </article>
-
-            <!--
-            <article class="box-user-credit">
-            </article>
-          -->
+          <span>#TITTLE#</span>
 
         </article>
 
-      </section>
+        <article class="preferences-hdd-payment-bottom">
+          <article class="box-hdd-usage">
+            <article class="hdd-info preferences-hdd-quota">
+                  <span class="preferences-hdd-usage"></span>
 
+                  <figure class="preferences-hdd-cake">
+                    <span class="preferences-hdd-cake-circle">
+                      <span class="preferences-hdd-cake-total"></span>
+                      <span class="preferences-hdd-cake-free"></span>
+                    </span>
 
+                      <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
 
+                  </figure>
+            </article>
 
-        </section>
-
-      <section class="preferences-bottom-content-more">
-
-        <section class="preferences-hdd-content-top">
-          <figure class="hdd-top-icon">
-            <i></i>
-          </figure>
-          <span></span>
-        </section>
-
-        <section class="preferences-hdd-content-bottom">
-          <article class="info-more left">
-            <li class="info-top">
-                <span class="tittle"></span>
-                <span></span>
-            </li>
-            <li class="info-bottom">
-              <span class="tittle"></span>
-              <span></span>
-            </li>
-          </article>
-          <article class="info-more right">
 
           </article>
-          <article class="info-more left">
+
+          <article class="box-current-plan">
+
+            <article class="box-current-plan-top">
+              <span>#Plan activo#</span>
+            </article>
+
+            <article class="box-current-plan-middle">
+              <article class="premium">
+                <article class="premium-info">
+                  <article class="left">
+                    <span>#50GB extra#</span>
+                  </article>
+                  <article class="right">
+                    <span>#2€/MES#</span>
+                  </article>
+                </article>
+                <article class="premium-date">
+                  <span>#Siguiente pago el 12/12/2012#</span>
+                </article>
+              </article>
+
+              <!--
+              <article class="free active">
+                <article class="img-info-plan"></article>
+              </article>
+            -->
+
+            </article>
+
+            <article class="box-current-plan-bottom">
+              <article class="ui-btn accept">
+                <span>#Boton Aceptar#</span>
+              </article>
+            </article>
+
 
           </article>
-        </section>
+        </article>
+      </section>
+
+      <!--
+      <section class="preferences-hdd-payment more">
 
       </section>
 
-      <section class="preferences-bottom-content-order">
+      <section class="preferences-hdd-payment order">
 
       </section>
 
-      <section class="preferences-bottom-content-finish">
+      <section class="preferences-hdd-payment finish">
 
       </section>
+    -->
 
       <!--
         <span class="preferences-bottom-title hdd"></span>
