--- a/main.html
+++ b/main.html
@@ -44,80 +44,190 @@
 
     <section class="preferences-bottom-content hdd">
 
-      <section class="preferences-hdd-payment space active">
+      <section class="hdd-container wz-scroll">
+        <section class="preferences-hdd-payment space active">
 
-        <article class="preferences-hdd-payment-top">
+          <article class="preferences-hdd-payment-top">
 
-          <figure>
-            <i></i>
-          </figure>
-          <span>#TITTLE#</span>
+            <figure>
+              <i></i>
+            </figure>
+            <span>#TITTLE#</span>
 
-        </article>
+          </article>
 
-        <article class="preferences-hdd-payment-bottom">
-          <article class="box-hdd-usage">
-            <article class="hdd-info preferences-hdd-quota">
-                  <span class="preferences-hdd-usage"></span>
+          <article class="preferences-hdd-payment-middle">
+            <article class="box-hdd-usage">
+              <article class="hdd-info preferences-hdd-quota big-box-hdd">
+                    <span class="preferences-hdd-usage"></span>
 
-                  <figure class="preferences-hdd-cake">
-                    <span class="preferences-hdd-cake-circle">
-                      <span class="preferences-hdd-cake-total"></span>
-                      <span class="preferences-hdd-cake-free"></span>
-                    </span>
+                    <figure class="preferences-hdd-cake">
+                      <span class="preferences-hdd-cake-circle">
+                        <span class="preferences-hdd-cake-total"></span>
+                        <span class="preferences-hdd-cake-free"></span>
+                      </span>
 
-                      <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
+                        <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
 
+                    </figure>
+              </article>
+
+
+            </article>
+
+            <article class="box-current-plan">
+
+              <article class="box-current-plan-top">
+                <span>#Plan activo#</span>
+              </article>
+
+              <article class="box-current-plan-middle">
+                <article class="premium-version">
+                  <article class="premium-info">
+                    <article class="left">
+                      <span>#50GB extra#</span>
+                    </article>
+                    <article class="right">
+                      <span>#2€/MES#</span>
+                    </article>
+                  </article>
+                  <article class="premium-date">
+                    <span>#Siguiente pago el 12/12/2012#</span>
+                  </article>
+                </article>
+
+                <!--
+                <article class="free active">
+                  <article class="img-info-plan"></article>
+                </article>
+              -->
+
+              </article>
+
+              <article class="box-current-plan-bottom">
+                <article class="ui-btn accept">
+                  <span>#Boton Aceptar#</span>
+                </article>
+              </article>
+
+
+            </article>
+          </article>
+        </section>
+        <section class="preferences-hdd-payment more">
+
+
+                <article class="preferences-hdd-payment-top">
+                  <figure>
+                    <i></i>
                   </figure>
-            </article>
+                  <span>#TITTLE#</span>
+                </article>
 
+                <article class="preferences-hdd-payment-middle">
 
-          </article>
+                  <article class="current-plan-options">
 
-          <article class="box-current-plan">
+                    <article class="info-current-plan">
+                      <article class="info-options big-box-hdd">
+                          <article class="options-top">
+                            <article class="options-top-left">
+                              <span class="big-text">#50GB Extra#</span>
+                              <span>#2€/mes#</span>
+                            </article>
 
-            <article class="box-current-plan-top">
-              <span>#Plan activo#</span>
-            </article>
+                            <article class="change-plan">
+                                <span>#Modificar#</span>
+                            </article>
+                          </article>
 
-            <article class="box-current-plan-middle">
-              <article class="premium">
-                <article class="premium-info">
-                  <article class="left">
-                    <span>#50GB extra#</span>
+                          <article class="options-middle">
+                            <span>#Se cobra el 7 de cada mes#</span>
+                          </article>
+
+                          <article class="options-bottom">
+                            <span>#Espacio total#</span>
+                            <span class="big-text grey">#75GB#</span>
+                          </article>
+                      </article>
+                    </article>
+
+                    <article class="info-current-card">
+
+                      <article class="info-current-card-top">
+
+                        <article class="type-card small-box-hdd">
+
+                          <article class="img-card">
+
+                          </article>
+                          <span>#Tarjeta de credito#</span>
+
+                        </article>
+
+                        <!--
+
+                        <article class="inevio-credit small-box-hdd">
+
+                          <article class="img-card">
+
+                          </article>
+                          <span>#INEVIO CREDIT#</span>
+
+                        </article>
+
+                        -->
+
+                      </article>
+
+                      <article class="info-current-card-bottom">
+
+                        <article class="number-credit-card">
+
+                          <figure>
+                            <i></i>
+                          </figure>
+                          <article class="number-card">
+                            <span>#6544 8979 2586 7852#</span>
+                          </article>
+                          <span class="delete-card">
+                            #Eliminar#
+                          </span>
+
+                        </article>
+                        <article class="info-current-payment">
+
+                          <p>#Se te cobrará de esta tarrjeta 2 putos euros de mierda todos los meses el dia 7. Para de tarjeta primero elimina tu puta tarjeta coño#</p>
+
+                        </article>
+
+                      </article>
+
+                    </article>
+
                   </article>
-                  <article class="right">
-                    <span>#2€/MES#</span>
+
+                  <!--
+                  <article class="more-space">
+
+                  </article>
+
+                -->
+                </article>
+
+
+                <article class="preferences-hdd-payment-bottom">
+                  <article class="ui-btn accept">
+                    <span>#Siguiente#</span>
                   </article>
                 </article>
-                <article class="premium-date">
-                  <span>#Siguiente pago el 12/12/2012#</span>
-                </article>
-              </article>
-
-              <!--
-              <article class="free active">
-                <article class="img-info-plan"></article>
-              </article>
-            -->
-
-            </article>
-
-            <article class="box-current-plan-bottom">
-              <article class="ui-btn accept">
-                <span>#Boton Aceptar#</span>
-              </article>
-            </article>
 
 
-          </article>
-        </article>
+        </section>
+
       </section>
 
       <!--
-      <section class="preferences-hdd-payment more">
-
-      </section>
 
       <section class="preferences-hdd-payment order">
 
